// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApplyButton /> renders correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.15rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  class="c0"
>
  
</a>
`;

exports[`<Container /> renders correctly 1`] = `
.c0 {
  background-color: white;
  border: 2px solid #eceff1;
  margin-bottom: 1.5rem;
}

<div
  class="c0"
>
  
</div>
`;

exports[`<HeadingRow /> renders correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eceff1;
  padding: 0.5rem 0.75rem;
}

<div
  class="c0 c1"
>
  
</div>
`;

exports[`<HighlightPoint /> renders correctly 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: 400;
}

@media (min-width:62em) {
  .c0 {
    padding-right: 1rem;
  }
}

<li
  class="c0"
>
  
</li>
`;

exports[`<InfoList /> renders correctly 1`] = `
.c0 {
  list-style: none;
  margin-bottom: 0;
  margin-top: 1rem;
  padding: 0;
}

<ul
  class="c0"
>
  
</ul>
`;

exports[`<MoreInfoRow /> renders correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c0 {
  border-top: 2px solid #eceff1;
  padding: 1rem;
  display: none;
}

<div
  class="c0 c1"
>
  
</div>
`;

exports[`<Product /> with highlighted set renders correctly 1`] = `
<styled.div
  data-product={true}
  highlight={true}
>
  <Styled(styled.div)
    highlight={true}
  >
    <pure(Star) />
    Landbay - Buy To Let Wizards
    <Component
      labels={
        Array [
          "broker only",
          "consumer favourite",
        ]
      }
    />
  </Styled(styled.div)>
  <styled.div>
    <Styled(styled.div)
      desktop="20"
      phone="100"
    >
      <img
        alt="Landbay"
        src="https://b2bfinance.com/images/partners/Landbay.png"
      />
    </Styled(styled.div)>
    <Component
      columns={
        Array [
          Object {
            "label": "Max LTV",
            "value": "85%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.49%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "2.75%",
          },
          Object {
            "label": "Fees",
            "value": "£1,495",
          },
        ]
      }
    />
    <Styled(styled.div)
      desktop="20"
      phone="100"
    >
      <Styled(styled.a)
        href="https://b2bfinance.com/enquire/buy-to-let"
        margin={true}
        onClick={[Function]}
        primary={true}
        rel="noopener"
        target="_blank"
      >
        Get Deal
      </Styled(styled.a)>
      <ProductConfirm
        description="B2Bfinance.com are registered intermediaries who will quote, package and submit your lending request to Natwest. There is no charge for this service as we are paid a small commission by Natwest to cover our time."
        forwardUrl="https://b2bfinance.com/enquire/buy-to-let"
        handleRequestClose={[Function]}
        open={false}
        title="Application via Brokers only"
      />
      <styled.a
        onClick={[Function]}
        secondary={true}
        slim={true}
      >
        more info
      </styled.a>
    </Styled(styled.div)>
  </styled.div>
  <Styled(styled.div)
    visible={false}
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean bibendum facilisis condimentum. Donec laoreet porttitor condimentum. Nulla luctus efficitur magna, eget rhoncus metus placerat sed.
    </span>
    <styled.div>
      <styled.div
        desktop="50"
        phone="100"
      >
        <styled.ul>
          <Component
            points={
              Array [
                "Online Application",
                "Mobile app",
                "Customer service winner",
              ]
            }
          />
        </styled.ul>
      </styled.div>
      <styled.div
        desktop="50"
        phone="100"
      >
        <styled.ul>
          <Component
            points={
              Array [
                "1.5% Early Repayment",
                "6 months cool off peroid",
                "No monthly fee for existing customers",
              ]
            }
          />
        </styled.ul>
      </styled.div>
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;

exports[`<Product /> with more information available renders correctly 1`] = `
<styled.div
  data-product={true}
  highlight={false}
>
  <Styled(styled.div)
    highlight={false}
  >
    Precise Oh So Precise Total Winners Deal
    <Component
      labels={
        Array [
          "broker only",
        ]
      }
    />
  </Styled(styled.div)>
  <styled.div>
    <Styled(styled.div)
      desktop="20"
      phone="100"
    >
      <img
        alt="Barclays"
        src="https://b2bfinance.com/images/partners/Precise.png"
      />
    </Styled(styled.div)>
    <Component
      columns={
        Array [
          Object {
            "label": "Max LTV",
            "value": "80%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.75%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "3%",
          },
          Object {
            "label": "Fees",
            "value": "£995",
          },
        ]
      }
    />
    <Styled(styled.div)
      desktop="20"
      phone="100"
    >
      <Styled(styled.a)
        href="https://b2bfinance.com/enquire/buy-to-let"
        margin={true}
        onClick={[Function]}
        primary={true}
        rel="noopener"
        target="_blank"
      >
        Get Deal
      </Styled(styled.a)>
      <styled.a
        onClick={[Function]}
        secondary={true}
        slim={true}
      >
        more info
      </styled.a>
    </Styled(styled.div)>
  </styled.div>
  <Styled(styled.div)
    visible={false}
  >
    <span>
      Whether your landlord is a first time buyer, a first time landlord or has a large portfolio, we have a range of products to help. Our range of mortgages also includes products for Limited Companies and HMOs.
    </span>
    <styled.div>
      <styled.div
        desktop="50"
        phone="100"
      >
        <styled.ul>
          <Component
            points={
              Array [
                "Complete online application",
                "Mobile app",
                "Customer service winner",
              ]
            }
          />
        </styled.ul>
      </styled.div>
      <styled.div
        desktop="50"
        phone="100"
      >
        <styled.ul>
          <Component
            points={
              Array [
                "Rental cover - ICR: based on individual circumstances",
                "5 year fixed rate products that help maximise the loan size available",
                "5 year fixed with 4% cashback available on purchases",
              ]
            }
          />
        </styled.ul>
      </styled.div>
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;

exports[`<Product /> without more information available renders correctly 1`] = `
<styled.div
  data-product={true}
  highlight={false}
>
  <Styled(styled.div)
    highlight={false}
  >
    Natwest Low Low Rate
    <Component
      labels={Array []}
    />
  </Styled(styled.div)>
  <styled.div>
    <Styled(styled.div)
      desktop="20"
      phone="100"
    >
      <img
        alt="Natwest"
        src="https://b2bfinance.com/images/partners/NatWest.png"
      />
    </Styled(styled.div)>
    <Component
      columns={
        Array [
          Object {
            "label": "Max LTV",
            "value": "85%",
          },
          Object {
            "label": "Initial Rate",
            "value": "1.52%",
          },
          Object {
            "label": "Subsequent Rate",
            "value": "3.25%",
          },
          Object {
            "label": "Fees",
            "value": "£995",
          },
        ]
      }
    />
    <Styled(styled.div)
      desktop="20"
      phone="100"
    >
      <Styled(styled.a)
        href="https://b2bfinance.com/enquire/buy-to-let"
        margin={false}
        onClick={[Function]}
        primary={true}
        rel="noopener"
        target="_blank"
      >
        Get Deal
      </Styled(styled.a)>
      <ProductConfirm
        description="B2Bfinance.com are registered intermediaries who will quote, package and submit your lending request to Natwest. There is no charge for this service as we are paid a small commission by Natwest to cover our time."
        forwardUrl="https://b2bfinance.com/enquire/buy-to-let"
        handleRequestClose={[Function]}
        open={false}
        title="Application via Brokers only"
      />
    </Styled(styled.div)>
  </styled.div>
</styled.div>
`;

exports[`<ProductCol /> renders correctly 1`] = `
.c1 {
  width: 100%;
  min-height: 1px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c0 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c0 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c0 small {
  font-size: 95%;
  font-weight: 300;
}

<div
  class="c0 c1"
>
  
</div>
`;

exports[`<ProductColumns /> renders correctly 1`] = `
.c1 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c0 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c0 span {
  font-size: 1.25rem;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c0 small {
  font-size: 95%;
}

@media (min-width:62em) {
  .c1 {
    -webkit-flex: 0 0 60%;
    -ms-flex: 0 0 60%;
    flex: 0 0 60%;
    max-width: 60%;
  }
}

<div
  class="c0 c1"
>
  <small>
    test
  </small>
  <span>
    test
  </span>
</div>
`;

exports[`<ProductHighlightPoints /> renders correctly 1`] = `
.c0 {
  font-size: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    padding-right: 1rem;
  }
}

<li
  class="c0"
>
  test
</li>
`;

exports[`<ProductLabels /> renders correctly 1`] = `
.c1 {
  border: 1px solid;
  border-radius: 1rem;
  font-size: 80%;
  padding: 0.2rem 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 div {
  margin: .5rem .5rem 0 0;
}

@media (min-width:36em) {
  .c0 {
    margin-left: auto;
  }

  .c0 div {
    margin: 0 .5rem 0 0;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    test
  </div>
</div>
`;

exports[`<ProductTechnicalPoints /> renders correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

.c0 svg {
  margin-right: 0.5rem;
}

@media (min-width:62em) {
  .c0 {
    margin-bottom: .5rem;
    padding-left: 1rem;
  }
}

<li
  class="c0"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root-1"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    >
      
    </path>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    >
      
    </path>
  </svg>
  test
</li>
`;

exports[`<StyledProductLabels /> renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 div {
  margin: .5rem .5rem 0 0;
}

@media (min-width:36em) {
  .c0 {
    margin-left: auto;
  }

  .c0 div {
    margin: 0 .5rem 0 0;
  }
}

<div
  class="c0"
>
  
</div>
`;

exports[`<TechnicalPoint /> renders correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

.c0 svg {
  fill: #4dc16f;
  margin-right: 0.5rem;
}

@media (min-width:62em) {
  .c0 {
    margin-bottom: .5rem;
    padding-left: 1rem;
  }
}

<li
  class="c0"
>
  
</li>
`;
